--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div id="messages"></div>
         <div id="input-box">
             <input type="text" id="message-input" placeholder="In una parola: cos'è la musica?"
-                oninput="limitAndCheckInput()" onkeypress="handleKeyPress(event)">
+                oninput="limitAndCheckInput(event)" onkeypress="handleKeyPress(event)">
             <button id="send-button" onclick="sendMessage()">Invia</button>
         </div>
     </div>
@@ -158,10 +158,10 @@
         }
 
 
-        function limitAndCheckInput() {
-            const inputValue = messageInput.value.trim();
-            const words = inputValue.split(' ');
-            messageInput.value = words[0];
+        function limitAndCheckInput(event) {
+            const inputValue = event.target.value.trim();
+            const filteredValue = inputValue.replace(/[^a-zA-Z]/g, ''); // Keep only alphabet letters
+            event.target.value = filteredValue;
         }
 
 
