--- a/index.html
+++ b/index.html
@@ -160,8 +160,10 @@
 
         function limitAndCheckInput(event) {
             const inputValue = event.target.value.trim();
-            const filteredValue = inputValue.replace(/[^a-zA-Z]/g, ''); // Keep only alphabet letters
-            event.target.value = filteredValue;
+            const regex = /^[a-zA-Z]*$/; // Regular expression to match only alphabet letters
+            if (!regex.test(inputValue)) {
+                event.target.value = inputValue.slice(0, -1); // Remove the last character if it's not a letter
+            }
         }
 
 
